[gd_scene load_steps=5 format=2]

[ext_resource path="res://modules/Reusables/JustKinematic.gd" type="Script" id=1]
[ext_resource path="res://modules/Reusables/parts/FrontRef.tscn" type="PackedScene" id=2]
[ext_resource path="res://modules/Reusables/parts/SpringCamArm.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]

[node name="JustKinematic" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollideMe" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="FormSlot" type="Spatial" parent="."]

[node name="FrontRef" parent="." instance=ExtResource( 2 )]

[node name="SpringCamArm" parent="." instance=ExtResource( 3 )]

[connection signal="on_camCurrent" from="SpringCamArm" to="." method="_on_SpringCamArm_on_camCurrent"]
